added all content

--- a/plantinintegration/index.html
+++ b/plantinintegration/index.html
@@ -5,11 +5,163 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inder&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+    rel="stylesheet">
   <title>Christophe Plantin</title>
 </head>
 
 <body>
 
+  <main>
+    <section class="hero_image">
+      <h1>Christophe Plantin</h1>
+      <p>Welcome to Christophe Plantin's world. Discover how his motto, "Labore et Constantia"—"By Labor and
+        Constancy"—shaped
+        literary history.</p>
+      <!-- <picture class="hero_picture">
+        <source srcset="./src/assets/phone_responsive.png" media="(max-width: 767px)">
+        <source srcset="./src/assets/desktop_responsive.png" media="(min-width: 768px)">
+        <img src="./src/assets/desktop_responsive.png" alt="Responsive Image"> -->
+      </picture>
+      <img src="./src/assets/Group 2.svg" alt="" class="arow">
+    </section>
+    <section class="who_is">
+      <div>
+        <h1 class="who">Who</h1>
+        <h2 class="is">is</h2>
+        <h3 class="christophe">Christphe Plantin?</h2>
+      </div>
+      <p class="who_is_text">Born in 1520 in Saint-Avertin, France, Christophe Plantin began his career as a skilled
+        bookbinder in Paris.
+        Seeking better opportunities, he moved to Antwerp, a bustling hub of commerce and culture, where his
+        craftsmanship quickly gained recognition. But his promising path was abruptly altered one fateful night,
+        setting
+        him on a journey that would
+        leave an indelible mark on history.</p>
+      <img class="who_is_img" src="./src/assets/travel.png" alt="">
+    </section>
+    <section class="container">
+      <section class="one_night_section">
+        <h1>One night in</h1>
+        <h2>1555</h2>
+        <!-- <img class="one_night_image" src="./src/int3 pictures/antwerp.png" alt=""> -->
+        <!-- <img class="eye" src="./src/int3 pictures/eye.png" alt=""> -->
+        <div class="one_night_section_text">
+          <p>Christophe Plantin carried a gilded leather basket, a stunning piece commissioned by a powerful client.
+          </p>
+          <p>The intricate work made it look like a treasure chest, drawing the attention of villains lurking in the
+            shadows.</p>
+        </div>
+      </section>
+      <section class="attack_section">
+        <div class="attack_section_text">The next moment, he realized—he had been attacked.</div>
+        <p>After weeks of struggle, he chose not to give up. Unfortunately, he broke his arm and had to quit his job,
+          but this
+          setback soon became a blessing in disguise.</p>
+        <img class="arrow" src="./src/assets/arrow.png" alt="">
+      </section>
+    </section>
+    <section class="new_beggining_section">
+      <h1>The</h1>
+      <h2>new beginning</h2>
+      <p>Encouraged by members of a progressive religious group, Plantin learned the art of printing. What began as a
+        means of
+        survival soon became his passion. With a keen eye for quality and an understanding of the market, he quickly
+        gained a
+        reputation for excellence.</p>
+      <img class="printing-press"
+        src="./src/assets/ancient-printing-press-antique-machine-hand-drawn_1296535-6218 1.png" alt="" width="350">
+      <img class="clouds" src="./src/assets/clouds.png" alt="" width="1800">
+    </section>
+    <section class="learn_section">
+      <h1>Learn</h1>
+      <h2>The art of printing</h2>
+      <p>Have you ever wondered how printing works?
+        Press the "Enter" key on your desktop or tap on the paper on your mobile device to experience the process!
+        Create your own piece of art—fill the entire canvas or take it step by step. The choice is yours!</p>
+      <canvas id="gameCanvas"></canvas>
+      <p class="good_job">Good job! You have talent!</p>
+    </section>
+    <section class="books_section">
+      <!-- <img src="./src/assets/books_clouds.png" alt=""> -->
+      <div>
+        <p class="books_one">His</p>
+        <p class="books_two">first printed works</p>
+        <p class="books_three">stood out</p>
+        <p class="books_four">for their</p>
+        <p class="books_five">precision</p>
+        <p class="books_six">and artistry</p>
+      </div>
+    </section>
+    <section class="building_section">
+      <h1>Building</h1>
+      <h2>the empire</h2>
+      <div class="building_block">
+        <div class="building_section_text">
+          <p>Plantin’s rise wasn’t just about printing , it was about <span>innovation</span>, <span>ambition</span>,
+            and <span>a relentless drive to grow</span>.</p>
+          <p>He expanded his business, producing not only religious texts but also <span>scientific works</span>,
+            <span></span>, and world-renowned
+            literature. His magnum opus, the Polyglot Bible, was a monumental achievement, bringing together scholars
+            from
+            across
+            Europe to publish <span>the Bible in multiple languages</span>.
+          </p>
+        </div>
+        <img class="books" src="./src/assets/books.svg" alt="">
+      </div>
+    </section>
+    <section class="guess_section">
+      <h1>Guess</h1>
+      <h2>the language</h2>
+      <p class="guess_text">Below is an excerpt from the Polyglot Bible published by Plantin. Can you identify the
+        language of these
+        sentences?</p>
+      <div class="interaction_section">
+        <p class="latin_text">Sic enim dilexit Deus mundum ut Filium suum unigenitum daret, ut omnis qui credit in eum
+          non pereat, sed
+          habeat vitam
+          aeternam.</p>
+        <div class="buttons">
+          <button id="hebrew">Hebrew</button>
+          <button id="greek">Greek</button>
+          <button id="latin">Latin</button>
+          <button id="aramaic">Aramaic</button>
+        </div>
+      </div>
+      <p class="feedback" id="feedback"></p>
+      <img src="./src/assets/papers.png" alt="paper">
+    </section>
+    <section class="vision_section">
+      <p class="vision_one">Printing</p>
+      <p class="vision_two">Flourished</p>
+      <p class="vision_three">Through</p>
+      <p class="vision_four">Plantin's vision</p>
+      <img src="./src/assets/blocks.png" alt="Letter blocks" width="550">
+    </section>
+    <section class="visit_section">
+      <h1>Ready</h1>
+      <h2>to visit us?</h2>
+      <p>From humble beginnings to shaping Europe's intellectual landscape, Christophe Plantin’s legacy lives on.
+        Discover his
+        journey at the Plantin-Moretus Museum—book your visit today.</p>
+      <button>Book your visit</button>
+      <!-- <img src="./src/assets/footer.png" alt=""> -->
+    </section>
+  </main>
+  <script src=" https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/MotionPathPlugin.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script type="module" src="/src/main.js"></script>
 </body>
 
